--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,15 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 pyzbar = "^0.1.9"
-opencv-contrib-python = "^4.12.0.88"
 requests = "^2.32.4"
-opencv-python = "^4.12.0.88"
 pillow = "^11.3.0"
 dynamsoft-barcode-reader-bundle = "^11.0.4000"
 dbr = "^9.6.40.3"
+pytesseract = "^0.3.13"
+easyocr = "^1.7.2"
+matplotlib = "^3.10.3"
+opencv-contrib-python = "^4.12.0.88"
+opencv-python = "^4.12.0.88"
 
 
 
